# ichor

./: .gitmodules  Makefile  compile_flags.txt  meson.build
.cache/clangd/index/: base.h.A618965C448FCDF0.idx  charon.h.8A4C30166CB4BD56.idx  elf.h.D37FBE8B2AF965AE.idx  error.h.00B9AD11DA32D20D.idx  port.h.0400636132D48E8E.idx  rights.h.D28EBC93CC82D5E5.idx  syscalls.h.F7A5052CA9F20E9C.idx  task.h.4F59E4030C73BCAF.idx  vm.h.CB7E11D541BB0FE6.idx
include/ichor/: alloc.h  base.h  charon.h  debug.h  elf.h  error.h  liballoc.h  libheap.h  port.h  rights.h  syscalls.h  task.h  vm.h
src/: alloc.c  debug.c  exec.c  liballoc.c  libheap.c  port.c  syscalls.c
